Revision history for {{$dist->name}}

{{$NEXT}}

2.001000 2014-10-16T19:13:57Z 7d672f0
 [Dependencies::Stats]
 - Dependencies changed since 2.000000, see misc/*.deps* for details
 - configure: ↓1 (recommends: ↑1)
 - develop: +7 ↑2 -3 (suggests: +2 -1)
 - runtime: -1
 - test: +2 ↑1 -4 (recommends: ↑3 -1)

 [Internals]
 - Stop Autoboxing

 [Metadata]
 - move repo to kentnl org
 - add copyright holder details

 [Tests]
 - Internals reimplemented with newer dztest tool

2.000000 2014-05-01T12:15:40Z
 [00 Minor]
 - No substantial code changes in this release, mostly packaging.
 - Mostly hands free except for non-cpan downstream vendors who might work by HAND

 [01 Toolkit Change]
 - EUMM is now used instead of Module::Build
 - EUMM/Test depedencies are now only escallated to latest as recommendations.

 [02 Version Scheme Change]
 - X.12345678 is now X.123456 ( mantissa 8 -> 6 )
 - This is the primary reason for the 2.x on the box.

 [Dependencies::Aggregate]
 - 5.008009 : 217
 - 5.010001 : 196
 - 5.018002 : 181
 - 5.019009 : 177

 [Dependencies::Stats]
 - Dependencies changed since 1.14000001, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +43 -2 (recommends: -1, suggests: +1 -1)
 - runtime: +1 ↑2
 - test: +4 ↓1 -2 (recommends: +4)

1.14000001 2013-04-26T15:19:42Z
 - Maintenance Release

 [Dependencies::Noteworthy]
 - Module::Build 0.3601 → 0.4004
 - Test::More 0.96 → 0.98

 [Dependencies::Stats]
 - Dependencies changed since 1.14000000, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +6 (suggests: ↑1)
 - test: ↑1

 [Documentation]
 - Add README.mkdn
 - Update Copyright Year

 [Meta]
 - Bug Tracker to Github Issues

 [Packaging]
 - utilise test_requires in Module::Build

1.14000000 2012-05-09T07:14:20Z
 - Maintenance release.

 [Dependencies::Noteworthy]
 - Dist::Zilla::MetaProvides::ProvideRecord 0 → 1.14000000

 [Dependencies::Stats]