@@ -1,3 +1,4 @@
-.build
-Dist-Zilla-Plugin-MetaProvides*
+/.build
+/Dist-Zilla-Plugin-MetaProvides-Class-*
+/tmp/
 *.swp
