@@ -1,6 +1,11 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.001001
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
 
 2.001000 2014-10-16T19:13:57Z
  [Added / test requires]
@@ -103,4 +108,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Changed / runtime requires]
  - Dist::Zilla::Plugin::MetaProvides 1.11034201 → 1.11044405
-
