@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.001001
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 2.001000 2014-10-16T19:13:57Z
  [Changed / configure recommends]
@@ -42,4 +51,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - Dist::Zilla::Plugin::MetaNoIndex
 
 1.11044406 2010-11-02T18:03:05Z
-
