@@ -1,6 +1,14 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 2.001000, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 (recommends: ↑1 ↓1)
 
 2.001000 2014-10-16T19:13:57Z 7d672f0
  [Dependencies::Stats]
@@ -205,4 +213,3 @@ Revision history for {{$dist->name}}
 
 1.0920012 2009-07-19T12:24:43Z
  - First version.
-
